--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -712,7 +712,7 @@
                 </div>
                     <div class="card mb-4"> 
                         <div class="card-header"> 
-                            <h4><i class="bi bi-basket-fill me-1" style="color: var(--asparagus);"></i> Get Food Packaging Recommendations</h4> 
+                            <h4><i class= style="color: var(--asparagus);"></i> Get Food Packaging Recommendations</h4> 
                         </div>
                         <div class="card-body p-4"> 
                             <form id="recForm"> 
